--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title><tropicalia-julia></title>
 </head>
 <body>
-   
-        //Código omitido
 
         <body>
             <header class=" p-5">
@@ -19,15 +17,13 @@
                         <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                     </ul>
+                    <button id="botao-acessibilidade" class="btn btn-primary fw-bold">acessibilidade</button>
                         <div id="acessibilidade">
                             <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
                             <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
                         </div>
                 </nav>
         </header>
-        
-        //Código omitido
-        
 
     <section id="inicio" class="my-5">
         <div class="inicio-fundo d-flex justify-content-between align-items-center">
@@ -85,4 +81,5 @@
 </section>
 
 </body>
+<script src="script.js"></script>
 </html>
